# config/routes.js
@@ -3,6 +3,7 @@ import { accountRouter } from "../src/account/account.router.js";
 import { followRouter } from "../src/follow/follow.router.js";
 import { postRouter } from "../src/post/post.router.js";
 import { commentRouter } from "../src/comment/comment.router.js";
+import { chatRouter } from "../src/chat/chat.router.js";
 
 export default function (app) {
     app.use('/auth', authRouter);
@@ -10,4 +11,5 @@ export default function (app) {
     app.use('/follow', followRouter);
     app.use('/posts', postRouter);
     app.use("/posts/:postId/comments", commentRouter);
+    app.use("/chats", chatRouter);
 }
