# src/account/account.router.js
@@ -1,41 +1,50 @@
-import express from 'express';
-import init from './account.provider.js';
-import { upload } from '../../lib/upload.js';
+import express from "express";
+import init from "./account.provider.js";
+import { upload } from "../../lib/upload.js";
 
 const { accountController } = init.controllers;
 const { isAuthenticated } = init.middlewares;
-const { accountChangeEmailValidator, accountChangePasswordValidator } = init.validators;
+const {
+    accountChangeEmailValidator,
+    accountChangePasswordValidator,
+    updateBioValidator,
+    deleteAccountValidator,
+} = init.validators;
 
 export const accountRouter = express.Router();
 
 accountRouter.use(isAuthenticated);
 
-accountRouter.patch(
-    "/privacy",
-    accountController.setAccountPrivacy
-); 
+accountRouter.patch("/privacy", accountController.setAccountPrivacy);
+
 accountRouter.patch(
     "/settings/email",
     accountChangeEmailValidator,
     accountController.changeUserEmail
 );
+
 accountRouter.patch(
     "/settings/password",
-    [
-        accountChangePasswordValidator
-    ],
+    accountChangePasswordValidator,
     accountController.changeUserPassword
 );
+
 accountRouter.patch(
     "/avatar",
     upload.single("profile-pic"),
     accountController.handleAvatarUpload
 );
-accountRouter.get(
-    "/search/:text",
-    accountController.searchUsers
+
+accountRouter.patch("/bio", updateBioValidator, accountController.updateBio);
+
+accountRouter.patch("/theme", accountController.updateTheme);
+
+accountRouter.delete(
+    "/",
+    deleteAccountValidator,
+    accountController.deleteAccount
 );
-accountRouter.get(
-    '/:username',
-    accountController.getUserInfo
-);
+
+accountRouter.get("/search/:text", accountController.searchUsers);
+
+accountRouter.get("/:username", accountController.getUserInfo);
