# src/auth/auth.controller.js
@@ -1,11 +1,13 @@
 export class AuthController {
-    constructor(authService) {
+    constructor(authService, sendEmail) {
         this.authService = authService;
 
         this.getUser = this.getUser.bind(this);
         this.signup = this.signup.bind(this);
         this.signin = this.signin.bind(this);
         this.verify = this.verify.bind(this);
+
+        this.sendEmail = sendEmail;
     }
 
     async signup(req, res) {
@@ -17,7 +19,16 @@ export class AuthController {
             email,
             password
         );
-        return res.status(201).send({ message: `${username} has signed up successfully!` });
+
+        void this.sendEmail(
+            email,
+            "Welcome to Lyncora",
+            `Welcome to Lyncora. \n\nYour account has been successfully created, and you’re all set to get started. \n\nThank you for joining us.`
+        );
+
+        return res
+            .status(201)
+            .send({ message: `${username} has signed up successfully!` });
     }
 
     async signin(req, res) {
@@ -47,11 +58,9 @@ export class AuthController {
     }
 
     async forgotPassword(req, res) {
-        return res
-            .status(200)
-            .send({
-                message: "Please check your email to reset your password!",
-            });
+        return res.status(200).send({
+            message: "Please check your email to reset your password!",
+        });
     }
 
     async resetPassword(req, res) {
